tests/ui/type-array-bad-len.stderr
error: no rules expected the token `@`
 --> $DIR/type-array-bad-len.rs:6:20
  |
6 |     input = [{ [T; @] }]
  |                    ^

error: aborting due to previous error

